# meletis-lab-to-nwb

./: README.md  make_env.yml  pyproject.toml
.github/workflows/: auto-publish.yml  test-install.yml
src/meletis_lab_to_nwb/arrow_maze_choice_task/: __init__.py  behaviorinterface.py  conversion_notes.md  convert_all_sessions.py  convert_session.py  metadata.yaml  nwbconverter.py
src/meletis_lab_to_nwb/opto_dlight/: __init__.py  conversion_notes.md  convert_all_sessions.py  convert_session.py  fiber_photometry_metadata.yaml  fiberphotometryinterface.py  metadata.yaml  nwbconverter.py  optogenetics_metadata.yaml  optogeneticsinterface.py
src/meletis_lab_to_nwb/tutorials/: arrow_maze_choice_task_demo.ipynb  extended_data_fig7FJ_replication.ipynb  opto_dlight_demo.ipynb
