[project]
name = "meletis-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Meletis  conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
  "neuroconv==0.9.1",
  "nwbinspector",
  "ndx-vame",
  "ndx-fiber-photometry",
  "ipykernel>=7.2.0",
]

[project.urls]
Repository="https://github.com/catalystneuro/meletis-lab-to-nwb"

[project.optional-dependencies]
#arrow_maze_choice_task = [
#  "neuroconv==0.9.1"   # Pinned dependencies to specific versions
#]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "*.yaml",
  "*.yml",
  "*.json",
]  # This includes the yaml (usually metadata) and any schemas you might need on both the sdist and wheel

[tool.hatch.build.targets.wheel]
packages = ["src/meletis_lab_to_nwb"]

[tool.hatch.build.targets.sdist]
packages = ["src/meletis_lab_to_nwb"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.codespell]
skip = '.git*,*.pdf,*.css'
check-hidden = true
ignore-words-list = 'assertin'

[tool.ruff]
exclude = [
  "*/__init__.py"
]
line-length = 120

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "I",  # All isort rules
    "UP006",  # non-pep585 annotation (tuple, list -> tuple, list)
    "UP007",  # non-pep604 annotation (Union[x, y] -> X | Y)
    "UP045",  # non pep604 annotation (Optional[x] -> x | None)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["meletis_lab_to_nwb"]
